<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:label="@string/app_name"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity">


    <LinearLayout
        android:id="@+id/inforLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvPlayerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center|bottom"
            android:text="@string/move"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center|bottom"
            android:padding="10dp"
            android:text="@string/move"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e5dc33"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/score"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/score"
                android:textColor="#e01313" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/score" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/groupLevel"
        android:layout_below="@+id/inforLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/background"
        android:gravity="center">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_border"
            android:gravity="center">

            <ImageView
                android:id="@+id/button1"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/button2"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="2" />

            <ImageView
                android:id="@+id/button3"
                style="@style/ticTacToeButton"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_border"
            android:gravity="center">

            <ImageView
                android:id="@+id/button4"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/button5"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="5" />

            <ImageView
                android:id="@+id/button6"
                style="@style/ticTacToeButton"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="6" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/button7"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/button8"
                style="@style/ticTacToeButton"
                android:background="@drawable/row_border_right"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="8" />

            <ImageView
                android:id="@+id/button9"
                style="@style/ticTacToeButton"
                android:onClick="@string/makeMove"
                android:padding="15dp"
                android:tag="9" />
        </TableRow>
    </TableLayout>

    <RadioGroup
        android:id="@+id/groupLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStartGame"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/normalMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/mediumMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hardMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hard" />
    </RadioGroup>

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbAutoStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:tag="@string/_false"

        android:text="@string/start_game" />

    <CheckBox
        android:id="@+id/cbAutoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:gravity="center"
        android:text="@string/next_game_auto_start" />


</RelativeLayout>